--- a/common/src/main/resources/assets/effortless/lang/ja_jp.json
+++ b/common/src/main/resources/assets/effortless/lang/ja_jp.json
@@ -1,90 +1,90 @@
 {
-  "effortless.action.circle_start_center": "Middle",
-  "effortless.action.circle_start_corner": "Corner",
-  "effortless.action.clipboard_disabled": "Disabled",
-  "effortless.action.clipboard_disabled.tooltip": "Transfer structures between worlds by copying and pasting blocks.",
-  "effortless.action.clipboard_enabled": "Enabled",
-  "effortless.action.clipboard_enabled.tooltip": "Transfer structures between worlds by copying and pasting blocks.",
-  "effortless.action.cube_filled": "Filled",
-  "effortless.action.cube_hollow": "Hollow",
-  "effortless.action.cube_skeleton": "Skeleton",
-  "effortless.action.face_both": "Both",
-  "effortless.action.face_horizontal": "Horizontal",
-  "effortless.action.face_vertical": "Vertical",
-  "effortless.action.fast_speed": "Fast",
-  "effortless.action.line_direction_all": "All",
-  "effortless.action.line_direction_axis_x": "X Axis",
-  "effortless.action.line_direction_axis_y": "Y Axis",
-  "effortless.action.line_direction_axis_z": "Z Axis",
-  "effortless.action.line_direction_floor": "Floor",
-  "effortless.action.magnet": "Magnet",
-  "effortless.action.mode_settings": "Build Mode",
-  "effortless.action.normal_speed": "Normal",
-  "effortless.action.passive_mode_disabled": "Disabled",
-  "effortless.action.passive_mode_disabled.tooltip": "Start to build anytime.",
-  "effortless.action.passive_mode_enabled": "Enabled",
-  "effortless.action.passive_mode_enabled.tooltip": "Start to build only when hold the passive build key. \nMake sure you have assigned the hotkey in key binds settings.",
-  "effortless.action.pattern": "Build Pattern",
-  "effortless.action.pattern_disabled": "Disabled",
-  "effortless.action.pattern_disabled.tooltip": "Create complex shapes by combining different transformers.",
-  "effortless.action.pattern_enabled": "Enabled",
-  "effortless.action.pattern_enabled.tooltip": "Create complex shapes by combining different transformers.",
-  "effortless.action.pattern_settings": "Pattern Settings",
-  "effortless.action.plane_filled": "Filled",
-  "effortless.action.plane_hollow": "Hollow",
-  "effortless.action.plane_length_equal": "Equal",
-  "effortless.action.plane_length_variable": "Variable",
-  "effortless.action.raise_long_edge": "Long",
-  "effortless.action.raise_short_edge": "Short",
-  "effortless.action.redo": "Redo",
-  "effortless.action.replace_blocks_and_air": "Blocks and Air",
-  "effortless.action.replace_blocks_and_air.tooltip": "Replace air and blocks that can be destroyed by tools when placing new blocks.",
-  "effortless.action.replace_blocks_only": "Blocks Only",
-  "effortless.action.replace_blocks_only.tooltip": "Replace blocks that can be destroyed by tools only when placing new blocks.",
-  "effortless.action.replace_custom.tooltip": "Replace blocks that are in the custom list only.",
-  "effortless.action.replace_disabled": "Off",
-  "effortless.action.replace_disabled.tooltip": "Replace air and replaceable blocks like grass only when placing new blocks.",
-  "effortless.action.replace_normal": "Normal",
-  "effortless.action.replace_offhand_only": "Offhand Only",
-  "effortless.action.replace_offhand_only.tooltip": "Replace blocks that holding in your offhand only when placing new blocks.",
-  "effortless.action.replace_quick": "Quick",
-  "effortless.action.settings": "Settings",
-  "effortless.action.thickness_1": "1 Block Thick",
-  "effortless.action.thickness_3": "3 Blocks Thick",
-  "effortless.action.thickness_5": "5 Blocks Thick",
-  "effortless.action.undo": "Undo",
-  "effortless.axis.undefined": "Undefined",
+  "effortless.action.circle_start_center": "中央",
+  "effortless.action.circle_start_corner": "角",
+  "effortless.action.clipboard_disabled": "無効化",
+  "effortless.action.clipboard_disabled.tooltip": "ブロックをコピー＆ペーストすることで、ワールド間で構造を転送。",
+  "effortless.action.clipboard_enabled": "有効化",
+  "effortless.action.clipboard_enabled.tooltip": "ブロックをコピー＆ペーストすることで、ワールド間で構造を転送。",
+  "effortless.action.cube_filled": "埋める",
+  "effortless.action.cube_hollow": "空洞",
+  "effortless.action.cube_skeleton": "骨組み",
+  "effortless.action.face_both": "両方",
+  "effortless.action.face_horizontal": "横",
+  "effortless.action.face_vertical": "縦",
+  "effortless.action.fast_speed": "速い",
+  "effortless.action.line_direction_all": "全て",
+  "effortless.action.line_direction_axis_x": "X軸",
+  "effortless.action.line_direction_axis_y": "Y軸",
+  "effortless.action.line_direction_axis_z": "Z軸",
+  "effortless.action.line_direction_floor": "床",
+  "effortless.action.magnet": "マグネット",
+  "effortless.action.mode_settings": "ビルドモード",
+  "effortless.action.normal_speed": "通常",
+  "effortless.action.passive_mode_disabled": "無効化",
+  "effortless.action.passive_mode_disabled.tooltip": "いつでもビルドができる。",
+  "effortless.action.passive_mode_enabled": "有効化",
+  "effortless.action.passive_mode_enabled.tooltip": "パッシブビルドキーを押したときだけビルドを開始します。\nキーバインド設定でホットキーが割り当てられていることを確認してください。",
+  "effortless.action.pattern": "ビルドパターン",
+  "effortless.action.pattern_disabled": "無効化",
+  "effortless.action.pattern_disabled.tooltip": "さまざまなトランスフォーマーを組み合わせて、複雑な形状を作成します。",
+  "effortless.action.pattern_enabled": "有効化",
+  "effortless.action.pattern_enabled.tooltip": "さまざまなトランスフォーマーを組み合わせて、複雑な形状を作成します。",
+  "effortless.action.pattern_settings": "パターンの設定",
+  "effortless.action.plane_filled": "埋める",
+  "effortless.action.plane_hollow": "空洞",
+  "effortless.action.plane_length_equal": "等しく",
+  "effortless.action.plane_length_variable": "可変",
+  "effortless.action.raise_long_edge": "長い",
+  "effortless.action.raise_short_edge": "短い",
+  "effortless.action.redo": "やり直し",
+  "effortless.action.replace_blocks_and_air": "ブロックと空気",
+  "effortless.action.replace_blocks_and_air.tooltip": "新しいブロックを配置する際に、ツールで破壊される可能性のある空気やブロックを置き換える。",
+  "effortless.action.replace_blocks_only": "ブロック",
+  "effortless.action.replace_blocks_only.tooltip": "新しいブロックを配置する際に、ツールで破壊される可能性のあるブロックを置き換える。",
+  "effortless.action.replace_custom.tooltip": "カスタムリストにあるブロックのみを置き換える。",
+  "effortless.action.replace_disabled": "無効",
+  "effortless.action.replace_disabled.tooltip": "新しいブロックを配置するときに際にのみ、空気と芝生のような交換可能なブロックを交換する。",
+  "effortless.action.replace_normal": "通常",
+  "effortless.action.replace_offhand_only": "オフハンドのみ",
+  "effortless.action.replace_offhand_only.tooltip": "新しいブロックを置くときだけ、オフハンドで保持しているブロックを交換する。",
+  "effortless.action.replace_quick": "速く",
+  "effortless.action.settings": "設定",
+  "effortless.action.thickness_1": "厚さ1ブロック",
+  "effortless.action.thickness_3": "厚さ3ブロック",
+  "effortless.action.thickness_5": "厚さ5ブロック",
+  "effortless.action.undo": "元に戻す",
+  "effortless.axis.undefined": "未定義",
   "effortless.axis.x": "X",
-  "effortless.axis.x_plane": "East West",
+  "effortless.axis.x_plane": "東西",
   "effortless.axis.y": "Y",
-  "effortless.axis.y_plane": "Top Bottom",
+  "effortless.axis.y_plane": "上下",
   "effortless.axis.z": "Z",
-  "effortless.axis.z_plane": "South North",
-  "effortless.build.summary.blocks_blacklisted": "Blacklisted",
-  "effortless.build.summary.blocks_break_blacklisted": "Not Whitelisted",
-  "effortless.build.summary.blocks_break_insufficient": "Insufficient",
-  "effortless.build.summary.blocks_break_not_whitelisted": "Blacklisted",
-  "effortless.build.summary.blocks_copied": "Copied",
-  "effortless.build.summary.blocks_destroyed": "Destroyed",
-  "effortless.build.summary.blocks_interacted": "Interacted",
-  "effortless.build.summary.blocks_items_insufficient": "Insufficient Items",
-  "effortless.build.summary.blocks_no_permission": "No Permission",
-  "effortless.build.summary.blocks_not_breakable": "Not Breakable",
-  "effortless.build.summary.blocks_not_copyable": "Not Copyable",
-  "effortless.build.summary.blocks_not_interactable": "Not Interactable",
-  "effortless.build.summary.blocks_not_placeable": "Not Placeable",
-  "effortless.build.summary.blocks_place_blacklisted": "Not Whitelisted",
-  "effortless.build.summary.blocks_place_insufficient": "Insufficient",
-  "effortless.build.summary.blocks_place_not_whitelisted": "Blacklisted",
-  "effortless.build.summary.blocks_placed": "Placed",
-  "effortless.build.summary.blocks_tools_insufficient": "Insufficient Tools",
-  "effortless.build.summary.no_item_summary": "No Item Summary",
-  "effortless.build.summary.pattern": "Pattern",
-  "effortless.build.summary.pattern_disabled": "Disabled",
-  "effortless.build.summary.pattern_enabled": "Enabled",
-  "effortless.build.summary.pending_item_summary": "Pending Item Summary",
-  "effortless.build.summary.state": "State",
-  "effortless.build.summary.structure": "Structure",
+  "effortless.axis.z_plane": "南北",
+  "effortless.build.summary.blocks_blacklisted": "ブラックリスト",
+  "effortless.build.summary.blocks_break_blacklisted": "ホワイトリスト外",
+  "effortless.build.summary.blocks_break_insufficient": "不十分",
+  "effortless.build.summary.blocks_break_not_whitelisted": "ブラックリスト",
+  "effortless.build.summary.blocks_copied": "コピー",
+  "effortless.build.summary.blocks_destroyed": "破棄",
+  "effortless.build.summary.blocks_interacted": "相互",
+  "effortless.build.summary.blocks_items_insufficient": "不足アイテム",
+  "effortless.build.summary.blocks_no_permission": "不許可",
+  "effortless.build.summary.blocks_not_breakable": "壊れない",
+  "effortless.build.summary.blocks_not_copyable": "コピー不可能",
+  "effortless.build.summary.blocks_not_interactable": "相互不可能",
+  "effortless.build.summary.blocks_not_placeable": "配置不可",
+  "effortless.build.summary.blocks_place_blacklisted": "ホワイトリスト外",
+  "effortless.build.summary.blocks_place_insufficient": "不十分",
+  "effortless.build.summary.blocks_place_not_whitelisted": "ブラックリスト",
+  "effortless.build.summary.blocks_placed": "配置",
+  "effortless.build.summary.blocks_tools_insufficient": "不十分なツール",
+  "effortless.build.summary.no_item_summary": "項目概要なし",
+  "effortless.build.summary.pattern": "パターン",
+  "effortless.build.summary.pattern_disabled": "無効化",
+  "effortless.build.summary.pattern_enabled": "有効化",
+  "effortless.build.summary.pending_item_summary": "保留項目の概要",
+  "effortless.build.summary.state": "ステート",
+  "effortless.build.summary.structure": "ストラクチャー",
   "effortless.build.summary.tracing": "Tracing",
   "effortless.build_settings.title": "Build Settings",
   "effortless.builder_settings.passive_mode": "Passive Mode",
