--- a/common/src/main/resources/assets/effortless/lang/ja_jp.json
+++ b/common/src/main/resources/assets/effortless/lang/ja_jp.json
@@ -85,24 +85,24 @@
   "effortless.build.summary.pending_item_summary": "保留項目の概要",
   "effortless.build.summary.state": "ステート",
   "effortless.build.summary.structure": "ストラクチャー",
-  "effortless.build.summary.tracing": "Tracing",
-  "effortless.build_settings.title": "Build Settings",
-  "effortless.builder_settings.passive_mode": "Passive Mode",
-  "effortless.builder_settings.reserved_tool_durability": "Reserved Tool Durability",
-  "effortless.builder_settings.title": "Builder Settings",
-  "effortless.builder_settings.tooltip": "These settings adjust build behaviors and tool consumption rules. They are available for client side only. \n\nThese settings are saved in file named %s in the config directory.",
+  "effortless.build.summary.tracing": "トレース",
+  "effortless.build_settings.title": "ビルド設定",
+  "effortless.builder_settings.passive_mode": "パッシブモード",
+  "effortless.builder_settings.reserved_tool_durability": "リザーブドツールの耐久性",
+  "effortless.builder_settings.title": "ビルダー設定",
+  "effortless.builder_settings.tooltip": "これらの設定は、ビルドの動作やツールの消費ルールを調整します。クライアントサイドでのみ使用できます。\n\nこれらの設定は、config ディレクトリの %s という名前のファイルに保存されます。",
   "effortless.building.radial.title": "Effortless Structure",
-  "effortless.building.settings.title": "Build Mode Settings",
+  "effortless.building.settings.title": "ビルドモード設定",
   "effortless.building.title": "Effortless Structure",
-  "effortless.button.add": "Add",
-  "effortless.button.cancel": "Cancel",
-  "effortless.button.clear": "Clear",
-  "effortless.button.delete": "Delete",
-  "effortless.button.done": "Done",
-  "effortless.button.done.tooltip": "This button goes back to the previous page.",
-  "effortless.button.down": "Move Down",
-  "effortless.button.duplicate": "Duplicate",
-  "effortless.button.edit": "Edit",
+  "effortless.button.add": "追加",
+  "effortless.button.cancel": "キャンセル",
+  "effortless.button.clear": "消去",
+  "effortless.button.delete": "削除",
+  "effortless.button.done": "完了",
+  "effortless.button.done.tooltip": "このボタンを押すと、前のページに戻ります。",
+  "effortless.button.down": "下に移動",
+  "effortless.button.duplicate": "重複",
+  "effortless.button.edit": "編集",
   "effortless.button.new": "New",
   "effortless.button.reset": "Reset",
   "effortless.button.save": "Save",
